--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- Sidebar user panel -->
             <div class="user-panel">
               <div class="pull-left image">
-                <img src="../dist/img/me.jpg" class="img-circle" alt="User Image">
+                <img src="/dist/img/me.jpg" class="img-circle" alt="User Image">
               </div>
               <div class="pull-left info">
                 <p>Nipaporn Meetubtim</p>
@@ -109,7 +109,7 @@
             <div class="box box-primary">
               <div class="box-body box-profile">
                 <a href="https://www.facebook.com/nipapornnpmt">
-                <img class="profile-user-img img-responsive img-circle" src="../../dist/img/me.jpg" alt="User profile picture">
+                <img class="profile-user-img img-responsive img-circle" src="dist/img/me.jpg" alt="User profile picture">
               </a>
                 <h3 class="profile-username text-center">Nipaporn Meetubtim</h3>
   
