add number guessing game

--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,12 @@
                     <span>Contact</span>
                   </a>
                 </li>
+                <li class="" style="height: auto;">
+                  <a href="https://myngmxy.github.io/CPE207_NumberGuessingGame/">
+                    <i class="fa fa-gamepad"></i>
+                    <span>Number Guessing Game</span>
+                  </a>
+                </li>
 
 
                         
