--- a/gallery.html
+++ b/gallery.html
@@ -92,6 +92,13 @@
                   </a>
                 </li>
 
+                <li class="" style="height: auto;">
+                  <a href="https://myngmxy.github.io/CPE207_NumberGuessingGame/">
+                    <i class="fa fa-gamepad"></i>
+                    <span>Number Guessing Game</span>
+                  </a>
+                </li>
+
 
                         
           <!-- /.sidebar -->
