add number guessing game

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Profile</title>
 <!-- Tell the browser to be responsive to screen width -->
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <!-- Bootstrap 3.3.7 -->
@@ -91,7 +91,7 @@
                 </li>
 
                 <li class="" style="height: auto;">
-                  <a href="https://myngmxy.github.io/CPE207_NumberGuessingGame/">
+                  <a href="game.html">
                     <i class="fa fa-gamepad"></i>
                     <span>Number Guessing Game</span>
                   </a>
