--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Profile</title>
+    <title>Home</title>
 <!-- Tell the browser to be responsive to screen width -->
 <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 <!-- Bootstrap 3.3.7 -->
@@ -63,7 +63,8 @@
                 <img src="dist/img/me.jpg" class="img-circle" alt="User Image">
               </div>
               <div class="pull-left info">
-                <p>Nipaporn Meetubtim</p>
+                
+                <p><a href="https://www.facebook.com/nipapornnpmt/">Nipaporn Meetubtim</a></p>
               </div>
             </div>
             <!-- sidebar menu: : style can be found in sidebar.less -->
