--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
                           <div class="form-group">
                             <label for="inputName" class="col-sm-2 control-label">Subject</label>
                             <div class="col-sm-10">
-                              <input type="email" class="form-control" id="inputName" placeholder="Name">
+                              <input type="email" class="form-control" id="inputName" placeholder="Subject">
                             </div>
                           </div>
 
