--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body class="hold-transition skin-purple sidebar-mini" >
+<body class="hold-transition skin-blue sidebar-mini" >
   <div class="wrapper">
     <header class="main-header">
       <!-- Logo -->
